import { ClientOptions, Transport } from "@nestjs/microservices";
import { ConfigService } from "@nestjs/config";

const configService: ConfigService = new ConfigService();

export const grpcClientOptions: ClientOptions = {
  transport: Transport.GRPC,
  options: {
    package: [
      "user",
      "conditions",
      "command",
      "conversationlinetemplate",
      "creaturequeststarter",
      "conversationactors",
      "creaturetemplategossip",
      "creatureclasslevelstats",
      "creaturetemplate",
      "creatureaddon",
      "creaturetemplateaddon",
      "creaturesummoneddata",
      "creature",
      "creaturesummongroups",
      "creaturetemplatelocale",
      "creaturetemplatedifficulty",
      "creaturetemplatespell",
      "creaturetemplatesparring",
      "creatureequiptemplate",
      "conversationtemplate",
      "creatureonkillreputation",
      "creaturemovementinfo",
      "creaturemodelinfo",
      "creatureimmunities",
      "creaturequestcurrency",
      "creaturetemplatemodel",
      "creaturetemplatemovement",
      "creaturequestitem",
      "creaturetextlocale",
      "creaturequestender",
      "creatureloottemplate",
      "creaturemovementoverride",
      "creaturetemplateresistance",
      "creatureformations",
      "creaturetext",
      "spell",
      "spelleffect",
      "skilldiscoverytemplate",
      "skillextraitemtemplate",
      "skillfishingbaselevel",
      "skilltiers",
      "skillperfectitemtemplate",
      "smartscripts",
      "skinningloottemplate",
      "serversidespell",
      "serversidespelleffect",
      "spawngroup",
      "spellarea",
      "spawngrouptemplate"
    ],
    protoPath: [
      "src/user/user.proto",
      "src/conditions/conditions.proto",
      "src/command/command.proto",
      "src/conversationlinetemplate/conversationlinetemplate.proto",
      "src/creaturequeststarter/creaturequeststarter.proto",
      "src/conversationactors/conversationactors.proto",
      "src/creaturetemplategossip/creaturetemplategossip.proto",
      "src/creatureclasslevelstats/creatureclasslevelstats.proto",
      "src/creaturetemplate/creaturetemplate.proto",
      "src/creatureaddon/creatureaddon.proto",
      "src/creaturetemplateaddon/creaturetemplateaddon.proto",
      "src/creaturesummoneddata/creaturesummoneddata.proto",
      "src/creature/creature.proto",
      "src/creaturesummongroups/creaturesummongroups.proto",
      "src/creaturetemplatelocale/creaturetemplatelocale.proto",
      "src/creaturetemplatedifficulty/creaturetemplatedifficulty.proto",
      "src/creaturetemplatespell/creaturetemplatespell.proto",
      "src/creaturetemplatesparring/creaturetemplatesparring.proto",
      "src/creatureequiptemplate/creatureequiptemplate.proto",
      "src/conversationtemplate/conversationtemplate.proto",
      "src/creatureonkillreputation/creatureonkillreputation.proto",
      "src/creaturemovementinfo/creaturemovementinfo.proto",
      "src/creaturemodelinfo/creaturemodelinfo.proto",
      "src/creatureimmunities/creatureimmunities.proto",
      "src/creaturequestcurrency/creaturequestcurrency.proto",
      "src/creaturetemplatemodel/creaturetemplatemodel.proto",
      "src/creaturetemplatemovement/creaturetemplatemovement.proto",
      "src/creaturequestitem/creaturequestitem.proto",
      "src/creaturetextlocale/creaturetextlocale.proto",
      "src/creaturequestender/creaturequestender.proto",
      "src/creatureloottemplate/creatureloottemplate.proto",
      "src/creaturemovementoverride/creaturemovementoverride.proto",
      "src/creaturetemplateresistance/creaturetemplateresistance.proto",
      "src/creatureformations/creatureformations.proto",
      "src/creaturetext/creaturetext.proto",
      "src/spell/spell.proto",
      "src/spelleffect/spelleffect.proto",
      "src/skilldiscoverytemplate/skilldiscoverytemplate.proto",
      "src/skillextraitemtemplate/skillextraitemtemplate.proto",
      "src/skillfishingbaselevel/skillfishingbaselevel.proto",
      "src/skilltiers/skilltiers.proto",
      "src/skillperfectitemtemplate/skillperfectitemtemplate.proto",
      "src/smartscripts/smartscripts.proto",
      "src/skinningloottemplate/skinningloottemplate.proto",
      "src/serversidespell/serversidespell.proto",
      "src/serversidespelleffect/serversidespelleffect.proto",
      "src/spawngroup/spawngroup.proto",
      "src/spellarea/spellarea.proto",
      "src/spawngrouptemplate/spawngrouptemplate.proto"
    ],
    url: configService.get<string>("GRPC_CLIENT_URL_PATH"),
  },
};
